[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://UIs/LifeContainer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Images/player.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 15 )

[node name="Player" type="KinematicBody2D"]
z_index = 1
script = ExtResource( 1 )

[node name="LifeContainer" parent="." instance=ExtResource( 2 )]
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 274.0

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="Cannon" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 1, 0.25 )
z_index = 1
texture = ExtResource( 3 )
offset = Vector2( 10, 0 )

[node name="FirePos" type="Position2D" parent="Cannon"]
position = Vector2( 10, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0

[node name="ShootTimer0" type="Timer" parent="."]

[node name="ShootTimer1" type="Timer" parent="."]
[connection signal="timeout" from="ShootTimer0" to="." method="_on_ShootTimer0_timeout"]
[connection signal="timeout" from="ShootTimer1" to="." method="_on_ShootTimer1_timeout"]
